fix: Fix 2D page overflowing to the right

--- a/src/frontend/Hatsune_Mixue/src/index.css
+++ b/src/frontend/Hatsune_Mixue/src/index.css
@@ -4,9 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
-body, html {
+html,
+body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 :root {
@@ -16,6 +20,9 @@ body, html {
 
 body {
   font-family: "Work Sans", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body:has(.card[data-color="blue"]:hover) {
